# aetheris-protocol

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile  release-plz.toml  rust-toolchain.toml
.config/: nextest.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  minimal-features.yml  publish.yml  release-plz.yml  zero-deps.yml
crates/aetheris-encoder-bitpack/: CHANGELOG.md  Cargo.toml  README.md
crates/aetheris-encoder-bitpack/src/: lib.rs
crates/aetheris-encoder-serde/: CHANGELOG.md  Cargo.toml  README.md
crates/aetheris-encoder-serde/src/: lib.rs  serde_encoder.rs
crates/aetheris-protocol/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/aetheris-protocol/proto/: auth.proto  matchmaking.proto  telemetry.proto
crates/aetheris-protocol/src/: error.rs  events.rs  lib.rs  reassembler.rs  test_doubles.rs  traits.rs  types.rs
docs/: API_DESIGN.md  CONTROL_PLANE_DESIGN.md  ENCODER_DESIGN.md  NETWORKING_DESIGN.md  PROTOCOL_DESIGN.md  TRANSPORT_DESIGN.md
scripts/: check_branding.py  doc_lint.py
