[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.14"
edition = "2024"
authors = ["garnizeH Labs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/garnizeh-labs/aetheris-protocol"

[workspace.dependencies]
# Internal Workspace Crates
aetheris-protocol = { path = "crates/aetheris-protocol" }
aetheris-encoder-serde = { path = "crates/aetheris-encoder-serde" }
aetheris-encoder-bitpack = { path = "crates/aetheris-encoder-bitpack" }

# External Dependencies (from monorepo)
thiserror = "2.0.18"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
rmp-serde = "1.3.1"
tracing = "0.1.44"
metrics = "0.24.3"
tokio = { version = "1.51.1", features = ["full"] }
tonic = { version = "0.12.3", default-features = false, features = ["prost", "codegen"] }
prost = "0.13.3"
tonic-build = "0.12.3"
