[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.3"
edition = "2024"
rust-version = "1.95.0"
authors = ["garnizeH Labs"]
description = "High-performance binary contracts and communication traits for the Aetheris Engine"
documentation = "https://docs.rs/aetheris-protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/garnizeh-labs/aetheris-protocol"
readme = "README.md"
keywords = ["networking", "protocol", "distributed-systems", "event-driven", "rpc"]
categories = ["network-programming", "development-tools::debugging", "development-tools::profiling"]

[workspace.dependencies]
# Internal Workspace Crates
aetheris-protocol = { path = "crates/aetheris-protocol", version = "0.2.3" }
aetheris-encoder-serde = { path = "crates/aetheris-encoder-serde", version = "0.2.3" }
aetheris-encoder-bitpack = { path = "crates/aetheris-encoder-bitpack", version = "0.2.3" }

# External Dependencies
thiserror = "2.0.18"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
rmp-serde = "1.3.1"
tracing = "0.1.44"
metrics = "0.24.3"
tokio = { version = "1.51.1", features = ["full"] }
tonic = { version = "0.14.3", default-features = false, features = ["codegen"] }
tonic-prost = "0.14.3"
prost = "0.14.1"
tonic-build = "0.14.3"
tonic-prost-build = "0.14.3"
