[package]
name = "aetheris-encoder-serde"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
aetheris-protocol = { workspace = true }
serde.workspace = true
rmp-serde.workspace = true
metrics.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest = "1.6.0"
