[package]
name = "aetheris-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.cargo-udeps.ignore]
development = []
build = ["tonic-build", "tonic-prost-build"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
async-trait.workspace = true
tracing.workspace = true
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
serde_bytes = "0.11.19"
twox-hash = "2.1.2"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }

[features]
test-utils = []
grpc = ["dep:tonic", "dep:tonic-prost", "dep:prost"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { workspace = true, optional = true, features = ["transport"] }
